--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=agroclimb-app
+spring.application.name=agroclimb-webapp
 
 # ===============================
 # = DATA SOURCE
