Obtencion de imagenes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,9 @@ spring.servlet.multipart.max-request-size=15MB
 # ===============================
 spring.security.oauth2.client.registration.google.client-id=${OAUTH2_GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${OAUTH2_GOOGLE_CLIENT_SECRET}
+
+# ===============================
+# = CUSTOM
+# ===============================
+google.cloud.functions.url=${GOOGLE_CLOUD_FUNCTIONS_URL}
+google.cloud.storage.images.url=${GOOGLE_CLOUD_STORAGE_IMAGES_URL}
