Actualización de timeout y adición de variabla de entorno google maps api key

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,5 +39,6 @@ spring.security.oauth2.client.registration.google.client-secret=${OAUTH2_GOOGLE_
 # ===============================
 # = CUSTOM
 # ===============================
+apis.google.maps.key=${APIS_GOOGLE_MAPS_KEY}
 google.cloud.functions.url=${GOOGLE_CLOUD_FUNCTIONS_URL}
 google.cloud.storage.images.url=${GOOGLE_CLOUD_STORAGE_IMAGES_URL}
