--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,13 @@ spring.servlet.multipart.max-file-size=15MB
 spring.servlet.multipart.max-request-size=15MB
 
 # ===============================
+# = TIME OUT
+# ===============================
+server.tomcat.connection-timeout=1800000
+spring.mvc.async.request-timeout=1800000
+
+
+# ===============================
 # = OAUTH2
 # ===============================
 spring.security.oauth2.client.registration.google.client-id=${OAUTH2_GOOGLE_CLIENT_ID}
