--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,14 +8,21 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.open-in-view = false
 
-# HikariCP pool settings
+# ===============================
+# = HIKARI CONNECTION POOL (optimizado para Azure App Service)
+# ===============================
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.idle-timeout=300000
-spring.datasource.hikari.max-lifetime=600000
-spring.datasource.hikari.keepalive-time=300000
+spring.datasource.hikari.idle-timeout=120000
+spring.datasource.hikari.max-lifetime=180000
+spring.datasource.hikari.keepalive-time=60000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.validation-timeout=5000
+
+# ===============================
+# = SERVER SHUTDOWN
+# ===============================
+server.shutdown=immediate
 
 # ===============================
 # = MAIL
